--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     padding: 0;
     color: #333;
     overflow-x: hidden;
-    background-image: url('wall.jpg');
+    background-image: url('Wall.JPG');
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -272,7 +272,7 @@ function toggleHeaderColor() {
         <h2>About Me</h2>
         <p>Hi, I'm Adi Luqman. I specialize in [Your Expertise]. I have worked on [Brief Summary of Notable Work].</p>
     </div>
-    <img src="img.jpg" alt="Bio" class="about-img">
+    <img src="img.JPG" alt="Bio" class="about-img">
 </section>
 
 
